--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -21,7 +21,7 @@
     <%= f.label :is_active, "販売ステータス" %>
     <%= f.select :is_active, [["販売中", true], ["売り切れ", false]] %>
   </div>
-  <div>
+  <div class="actions">
     <%= f.submit "変更を保存" %>
   </div>
 <% end %>
