--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -29,7 +29,7 @@
     <%= f.select :is_active, [["販売中", true], ["売り切れ", false]] %>
   </div>
 
-  <div>
+  <div class="actions">
     <%= f.submit "新規登録" %>
   </div>
 <% end %>
