--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,16 +1,16 @@
 <div class="container">
     <div class="row">
-        <div class="col-xs-3">
-	<%= form_with model: @genre, url: 'admin/genres', local: true do |f| %>
+        <div class="col-md-3">
+	<%= form_with model: @genre, url: 'genres', local: true do |f| %>
     <h1>ジャンル一覧・追加</h1>
     <div class="field row">
         <%= f.label :ジャンル %>
-        <%= f.text_field :name, class: 'col-xs-12 genre_name' %>
+        <%= f.text_field :name, class: 'col-md-6 genre_name' %>
         <%= f.radio_button :is_active, :true %>
         <%= f.label :is_active, "有効", {value: :true, style: "display: inline-block;"} %>
         <%= f.radio_button :is_active, :false %>
         <%= f.label :is_active, "無効", {value: :false, style: "display: inline-block;"} %>
-        <%= f.submit '追加', class: 'btn btn-primary col-xs-12' %>
+        <%= f.submit '追加', class: 'btn btn-info, col-xs-12' %>
     </div>
 
     <table class="table table-hover table-inverse">
@@ -26,8 +26,8 @@
 		<tbody>
 			<% @genres.each do |genre| %>
 			<tr>
-				<td><%= link_to genre.name, genre_path(genre), class: "genre_#{genre.id}" %></td>
-				<td><%= link_to genre.is_active, genre_path(genre), class: "genre_#{genre.id}" %></td>
+				<td><%= admin_genre_path(genre) %></td>
+				<td><%= genre.is_active, class: "genre_id" %></td>
 				<td><%= f.submit '編集する', class: 'btn btn-primary col-xs-12' %></td>
 			</tr>
 			<% end %>
