--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -2,53 +2,55 @@
   <div class="row">
     <div class="col-xs-offset-1 col-xs-11">
       <table class="table">
-          
-        <tr>  
-    　  <td><%= @user.first_name %> <%= @user.last_name %>の会員詳細</td>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>顧客ID</th>
-    　  <th><%= @user.id %></th>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>氏名</th>
-    　  <th><%= @user.first_name %> <%= @user.last_name %></th>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>フリガナ</th>
-    　  <th><%= @user.last_name_kana %> <%= @user.first_name_kana %></th>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>郵便番号</th>
-    　  <th><%= @user.postal_code %></th>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>住所</th>
-    　  <th><%= @user.address %></th>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>電話番号</th>
-    　  <th><%= @user.phone %></th>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>メールアドレス</th>
-    　  <th><%= @user.email %></th>
-    　  </tr>
-    　</table>
-    　
-    　<%= link_to edit_admin_customer_path(@user) do %>
-        <span class="btn btn-info">編集する</span>
-      <% end %>
-      
-      <%= link_to admin_orders_path(id: @user.id) do %>
-      <% end %>
+       <%= @customer.name %>さんの会員情報編集
+       <%= form_for(@customer, url:admin_customer_path, method: :patch) do |f| %>
+        <label>会員ID</label>
+        <%= @customer.id %>
+        
+        <div class="form-group">
+          <label>氏名</label>
+          <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+          <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+        </div>
+        
+        <div class="form-group">
+          <label>フリガナ</label>
+          <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
+          <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %>
+        </div>
+        
+        <div class="form-group">
+          <label>郵便番号</label>
+          <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
+        </div>
+        
+        <div class="form-group">
+          <label>住所</label>
+          <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
+        </div>
+        
+        <div class="form-group">
+          <label>電話番号</label>
+          <%= f.telephone_field :phone, autofocus: true, autocomplete: "phone" %>
+        </div>
+        
+        <div class="form-group">
+          <label>メールアドレス</label>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
+        
+        <div class="form-group">
+          <%= f.label :"会員ステータス" %>
+          <%= f.radio_button :is_deleted, false %>
+          <%= f.label :is_deleted, "有効", {value: :false, style: "display: inline-block;"} %>
+          <%= f.radio_button :is_deleted, true %>
+          <%= f.label :is_deleted, "退会済", {value: :true, style: "display: inline-block;"} %>
+        </div>
+        
+        <div class="actions">
+          <%= f.submit '変更を保存する' ,class: "btn btn-primary" %>
+        </div>
+       <% end %>
     </div>
   </div>
 </div>
