--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -9,15 +9,17 @@
 	  　　    <th>メールアドレス</th>
 	  　　    <th>ステータス</th>
 	  　　</tr>
-          <% @users.each do |user| %>
+          <% @customer.each do |customer| %>
           <tr>
-              <td><%= user.id %></td>
+              <td><%= customer.id %></td>
               <td>
-                  <%= link_to admin_user_path(user) do %>
-                     <%= user.first_name %> <%= user.last_name %>
+                  <%= link_to admin_customer_path(customer) do %>
+                     <%= customer.first_name %> <%= customer.last_name %>
+
+
                   <% end %>
               </td>
-              <td><%= user.email %></td>
+              <td><%= customer.email %></td>
           <% end %>
 　　　　</table>
     </div>
