--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -2,52 +2,48 @@
   <div class="row">
     <div class="col-xs-offset-1 col-xs-11">
       <table class="table">
-          
-        <tr>  
-    　  <td><%= @user.first_name %> <%= @user.last_name %>の会員詳細</td>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>顧客ID</th>
-    　  <th><%= @user.id %></th>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>氏名</th>
-    　  <th><%= @user.first_name %> <%= @user.last_name %></th>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>フリガナ</th>
-    　  <th><%= @user.last_name_kana %> <%= @user.first_name_kana %></th>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>郵便番号</th>
-    　  <th><%= @user.postal_code %></th>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>住所</th>
-    　  <th><%= @user.address %></th>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>電話番号</th>
-    　  <th><%= @user.phone %></th>
-    　  </tr>
-    　  
-    　  <tr>
-    　  <th>メールアドレス</th>
-    　  <th><%= @user.email %></th>
-    　  </tr>
-    　</table>
-    　
-    　<%= link_to edit_admin_customer_path(@user) do %>
+       <%= @customer.name %>さんの会員情報詳細
+       <tr>
+         <td>顧客ID</td>
+         <td><%= @customer.id %></td>
+       </tr>
+       <tr>
+         <td>氏名</td>
+         <td><%= @customer.first_name %> <%= @customer.last_name %></td>
+       </tr>
+       
+       <tr>
+         <td>フリガナ</td>
+         <td><%= @customer.first_name_kana %> <%= @customer.last_name_kana %></td>
+       </tr>
+       
+       <tr>
+         <td>郵便番号</td>
+         <td><%= @customer.postal_code %></td>
+       </tr>
+       
+       <tr>
+         <td>住所</td>
+         <td><%= @customer.adress %></td>
+       </tr>
+       
+       <tr>
+         <td>電話番号</td>
+         <td><%= @customer.phone_number %></td>
+       </tr>
+       
+       <tr>
+         <td>メールアドレス</td>
+         <td><%= @customer.email %></td>
+       </tr>
+      </table>
+      
+      <%= link_to edit_admin_customer_path(@customer) do %>
         <span class="btn btn-info">編集する</span>
       <% end %>
       
-      <%= link_to admin_orders_path(id: @user.id) do %>
+      <%= link_to admin_orders_path(@customer.id) do %>
+        <span class="btn btn-info">注文履歴一覧をみる</span>
       <% end %>
     </div>
   </div>
