--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,42 +1,42 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-5 col-md-offset-3">
+    <div class="col-md-7 col-md-offset-3">
       <h2>商品一覧</h2>
-    </div>
 
-    <div class="col-md-8 col-md-offset-2">
-      <table>
+      <table class="table table-hover table-inverse">
         <thead>
-          <th>
-            <tr>商品ID</tr>
-            <tr>商品名</tr>
-            <tr>税抜価格</tr>
-            <tr>ジャンル</tr>
-            <tr>ステータス</tr>
-          </th>
+          <tr>
+            <th>商品ID</th>
+            <th>商品名</th>
+            <th>税抜価格</th>
+            <th>ジャンル</th>
+            <th>ステータス</th>
+          </tr>
         </thead>
+
         <tbody>
           <% @products.each do |product| %>
-          <tb>
-            <tr>
+          <tr>
+            <td>
               <%= product.id %>
-            </tr>
-            <tr>
+            </td>
+            <td>
               <%= link_to product.name, admin_product_path(product) %>
-            </tr>
-            <tr>
+            </td>
+            <td>
               <%= product.price %>
-            </tr>
-            <tr>
+            </td>
+            <td>
               <%= product.genre_id %>
-            </tr>
-            <tr>
+            </td>
+            <td>
               <%= product.is_active %>
-            </tr>
-          </tb>
+            </td>
+          </tr>
           <% end %>
         </tbody>
       </table>
+      <%= paginate @products %>
     </div>
   </div>
 </div>
