--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,35 +1,44 @@
-<h2>商品新規登録</h2>
-<%= form_with model:@product, local: true do |f| %>
-  <div class="field">
-    <%= f.attachment_field :image %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7 col-md-offset-3">
+      <h2>商品新規登録</h2>
+    </div>
+    <div>
+      <%= form_with model: @product, url: admin_products_path, local: true do |f| %>
+        <div class="field">
+          <%= f.attachment_field :image %>
+        </div>
+      
+        <div class="field">
+          <%= f.label :name, "商品名" %>
+          <%= f.text_field :name %>
+        </div>
+      
+        <div class="field">
+          <%= f.label :introduction, "商品説明" %>
+          <%= f.text_field :introduction %>
+        </div>
+      
+        <div class="field">
+          <%= f.label :genre_id, "ジャンル" %>
+          <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+        </div>
+      
+        <div class="field">
+          <%= f.label :price, "税抜価格" %>
+          <%= f.number_field :price %>
+        </div>
+      
+        <div class="field">
+          <%= f.label :is_active, "販売ステータス" %>
+          <%= f.select :is_active, [["販売中", true], ["売り切れ", false]] %>
+        </div>
+      
+        <div class="actions">
+          <%= f.submit "新規登録" %>
+        </div>
+      <% end %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :name, "商品名" %>
-    <%= f.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :introduction, "商品説明" %>
-    <%= f.text_field :introduction %>
-  </div>
-
-  <div class="field">
-    <%= f.label :genre_id, "ジャンル" %>
-    <%= f.collection_select :genre_id, Genre.all, :id, :name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :price, "税抜価格" %>
-    <%= f.number_field :price %>
-  </div>
-
-  <div class="field">
-    <%= f.label :is_active, "販売ステータス" %>
-    <%= f.select :is_active, [["販売中", true], ["売り切れ", false]] %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "新規登録" %>
-  </div>
-<% end %>
+</div>
