--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,14 +1,15 @@
-<%= form_with model:@genre, local:true do |f| %>
 <div class="container">
   <div class="row">
-	<div class="col-xs-3">
+	<div class="col-md">
 	  <h2>ジャンル編集</h2>
     <div class="field row">
+      <%= form_with model: @genre, url: admin_genre_path(@genre), local: true do |f| %>
         <%= f.label :ジャンル %>
-        <%= f.text_field :name, class: 'col-xs-12 genre_name' %>
+        <%= f.text_field :name, class: 'genre_name' %>
         <%= f.radio_button :is_active, :true %>
         <%= f.label :is_active, "有効", {value: :true, style: "display: inline-block;"} %>
         <%= f.radio_button :is_active, :false %>
         <%= f.label :is_active, "無効", {value: :false, style: "display: inline-block;"} %>
-        <%= f.submit '変更を保存する', class: 'btn btn-info, col-xs-12' %>
+        <%= f.submit '変更を保存する', class: 'btn btn-info' %>
+      <% end %>
     </div>
