--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,22 +1,22 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-3">
-	<%= form_with model: @genre, url: 'genres', local: true do |f| %>
+        <div class="col-md-6">
     <h1>ジャンル一覧・追加</h1>
-    <div class="field row">
+	<%= form_with model: @genre, url: admin_genres_path, local: true do |f| %>
+    <div>
         <%= f.label :ジャンル %>
-        <%= f.text_field :name, class: 'col-md-6 genre_name' %>
+        <%= f.text_field :name, class: 'genre_name' %>
         <%= f.radio_button :is_active, :true %>
         <%= f.label :is_active, "有効", {value: :true, style: "display: inline-block;"} %>
         <%= f.radio_button :is_active, :false %>
         <%= f.label :is_active, "無効", {value: :false, style: "display: inline-block;"} %>
-        <%= f.submit '追加', class: 'btn btn-info, col-xs-12' %>
+        <%= f.submit '追加', class: 'btn btn-info' %>
     </div>
+    <% end %>
 
     <table class="table table-hover table-inverse">
 		<thead>
 			<tr>
-				<th></th>
 				<th>ジャンル</th>
 				<th>状態</th>
 				<th colspan="3"></th>
@@ -26,14 +26,16 @@
 		<tbody>
 			<% @genres.each do |genre| %>
 			<tr>
-				<td><%= admin_genre_path(genre) %></td>
-				<td><%= genre.is_active, class: "genre_id" %></td>
-				<td><%= f.submit '編集する', class: 'btn btn-primary col-xs-12' %></td>
+				<td><%= genre.name %></td>
+				<td>
+					<% if genre.is_active == TRUE %>
+						<%= '有効' %>
+					<% else %>
+						<%= '無効' %>
+					<% end %>
+				</td>
+				<td><%= link_to '編集する', edit_admin_genre_path(genre), class: 'btn btn-primary' %></td>
 			</tr>
 			<% end %>
 		</tbody>
 	</table>
-	<% end %>
-        </div>
-    </div>
-</div>
