--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -64,7 +64,7 @@
       <h4>送料</h4>
       <%= @order.postage %>
       <h4>請求金額合計</h4>
-      <%= @order.total_payment.to_s(:delimited) %>
+      <%= @order.total_pay.to_s(:delimited) %>
     </div>
    
   </div>
