--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -27,6 +27,7 @@
             <td><%= order.status %></td>
            </tr>
           <% end %>
+          <%= paginate @orders %>
         </tbody>
       </table>
     </div>
