--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-offset-1 col-xs-11">
       <table class="table">
-       <%= @customer.name %>さんの会員情報編集
+       <%= @customer.first_name %> <%= @customer.last_name %>さんの会員情報編集
        <%= form_for(@customer, url:admin_customer_path, method: :patch) do |f| %>
         <label>会員ID</label>
         <%= @customer.id %>
@@ -31,7 +31,7 @@
         
         <div class="form-group">
           <label>電話番号</label>
-          <%= f.telephone_field :phone, autofocus: true, autocomplete: "phone" %>
+          <%= f.telephone_field :phone_number, autofocus: true, autocomplete: "phone" %>
         </div>
         
         <div class="form-group">
