--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -2,11 +2,12 @@
   <div class="row">
     <div class="col-xs-offset-1 col-xs-11">
       <table class="table">
-       <%= @customer.name %>さんの会員情報詳細
+      <%= @customer.first_name %> <%= @customer.last_name %>さんの会員情報詳細
        <tr>
          <td>顧客ID</td>
          <td><%= @customer.id %></td>
        </tr>
+      
        <tr>
          <td>氏名</td>
          <td><%= @customer.first_name %> <%= @customer.last_name %></td>
