--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-offset-1 col-xs-11">
       <h3>管理者画面</h3>
       <span>本日の注文件数は</span>
-					<%#= @count %>
+					<%= @count %>
 			<span>件です</span>
     </div>
   </div>
