--- a/app/views/layouts/_admin_application.html.erb
+++ b/app/views/layouts/_admin_application.html.erb
@@ -1,44 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Naganocake</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
-    
-    <header>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2">
-            <h1>NaganoCake</h1>
-          </div>
-          <div class="col-md-10">
-            <ul class="nav nav-tabs">
-              <li class=""><%= link_to "商品一覧", admin_products_path %></li>
-              <li class=""><%= link_to "会員一覧", admin_customers_path %></li>
-              <li class=""><%= link_to "注文履歴一覧", admin_orders_path %></li>
-              <li class=""><%= link_to "ジャンル一覧", admin_genres_path %></li>
-              <li class=""><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
-            </ul>
-          </div>
-        </div>
+<header>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2">
+        <h1>NaganoCake</h1>
       </div>
-    </header>
-    
-    <%= yield %>
-    
-    <footer>
-      <div class="container">
-        <div class="row">
-          
-        </div>
+      <div class="col-md-10">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-item"><%= link_to "商品一覧", admin_products_path %></li>
+          <li class="nav-item"><%= link_to "会員一覧", admin_customers_path %></li>
+          <li class="nav-item"><%= link_to "注文履歴一覧", admin_orders_path %></li>
+          <li class="nav-item"><%= link_to "ジャンル一覧", admin_genres_path %></li>
+          <li class="nav-item"><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
+        </ul>
       </div>
-    </footer>
-    
-  </body>
-</html>
+    </div>
+  </div>
+</header>
