--- a/app/views/layouts/_admin_application.html.erb
+++ b/app/views/layouts/_admin_application.html.erb
@@ -6,11 +6,15 @@
       </div>
       <div class="col-md-10">
         <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item"><%= link_to "商品一覧", admin_products_path %></li>
-          <li class="nav-item"><%= link_to "会員一覧", admin_customers_path %></li>
-          <li class="nav-item"><%= link_to "注文履歴一覧", admin_orders_path %></li>
-          <li class="nav-item"><%= link_to "ジャンル一覧", admin_genres_path %></li>
-          <li class="nav-item"><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
+          <% if admin_signed_in? %>  
+            <li class="nav-item"><%= link_to "商品一覧", admin_products_path %></li>
+            <li class="nav-item"><%= link_to "会員一覧", admin_customers_path %></li>
+            <li class="nav-item"><%= link_to "注文履歴一覧", admin_orders_path %></li>
+            <li class="nav-item"><%= link_to "ジャンル一覧", admin_genres_path %></li>
+            <li class="nav-item"><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
+          <% else %>
+            <%= render 'layouts/top_header' %>
+          <% end %>
         </ul>
       </div>
     </div>
