--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   
     <div class="row">
-      <h3>注文履歴一覧</h3>
+      <h3><mark>注文履歴一覧</mark></h3>
     </div>
     
     <div class="row">
