レイアウト以外完了版(妻夫木)

--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
 	<div class="col-md">
-	  <h2>ジャンル編集</h2>
+	  <h3><mark>ジャンル編集</mark></h3>
     <div class="field row">
       <%= form_with model: @genre, url: admin_genre_path(@genre), local: true do |f| %>
         <%= f.label :ジャンル %>
