--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-    <h1>ジャンル一覧・追加</h1>
+    <h3><mark>ジャンル一覧・追加</mark></h3>
 	<%= form_with model: @genre, url: admin_genres_path, local: true do |f| %>
     <div>
         <%= f.label :ジャンル %>
