--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,8 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-7 col-md-offset-3">
-      <h2>商品一覧</h2>
+    <div class="col-md-10 col-md-offset-2">
+      <mark>
+        <h4>商品一覧</h4>
+      </mark>
 
+      <%= link_to "新規登録(仮)", new_admin_product_path %>
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
@@ -27,10 +30,14 @@
               <%= product.price %>
             </td>
             <td>
-              <%= product.genre_id %>
+              <%= product.genre.name %>
             </td>
             <td>
-              <%= product.is_active %>
+              <% if product.is_active == true %>
+                <%= "販売中" %>
+              <% else %>
+                <%= "販売中止" %>
+              <% end %>
             </td>
           </tr>
           <% end %>
