--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,44 +1,47 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-7 col-md-offset-3">
-      <h2>商品新規登録</h2>
+    <div class="col-md-10 col-md-offset-2">
+      <mark>
+        <h4>商品新規登録</h4>
+      </mark>
     </div>
-    <div>
-      <%= form_with model: @product, url: admin_products_path, local: true do |f| %>
-        <div class="field">
-          <%= f.attachment_field :image %>
-        </div>
-      
+  </div>
+  <div class="row">
+    <%= form_with model: @product, url: admin_products_path, local: true do |f| %>
+      <div class="field col-md-4 col-md-offset-1">
+        <%= f.attachment_field :image %>
+      </div>
+
+      <div class="col-md-4">
         <div class="field">
           <%= f.label :name, "商品名" %>
           <%= f.text_field :name %>
         </div>
-      
+
         <div class="field">
           <%= f.label :introduction, "商品説明" %>
           <%= f.text_field :introduction %>
         </div>
-      
+
         <div class="field">
           <%= f.label :genre_id, "ジャンル" %>
-          <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+          <%= f.collection_select :genre_id, Genre.all, :id, :name, prompt: "--選択してください--" %>
         </div>
-      
+
         <div class="field">
           <%= f.label :price, "税抜価格" %>
-          <%= f.number_field :price %>
+          <%= f.number_field :price %>円
         </div>
-      
+
         <div class="field">
           <%= f.label :is_active, "販売ステータス" %>
-          <%= f.select :is_active, [["販売中", true], ["売り切れ", false]] %>
+          <%= f.select :is_active, [["販売中", true], ["売り切れ", ]], { include_blank: "--選択して下さい--", selected: 0 } %>
         </div>
-      
-        <div class="actions">
-          <%= f.submit "新規登録" %>
-        </div>
-      <% end %>
       </div>
-    </div>
+
+      <div class="actions col-md-1">
+        <%= f.submit "新規登録" %>
+      </div>
+    <% end %>
   </div>
 </div>
