--- a/app/views/public/products/show.html.erb
+++ b/app/views/public/products/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
       <%= render 'public/genres/genre_search', genres: @genres %>
     </div>
-    <div class="col-md-2">
-      <%= attachment_image_tag(@product, :image, :fill, 230, 230, fallback: "no_image.png") %>
+    <div class="col-md-3">
+      <%= attachment_image_tag(@product, :image,  size: '230x230', fallback: "no_image.png") %>
     </div>
     <div class="col-md-6">
       <h3><%= @product.name %></h3>
