骨組み完成

--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the public::customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.col-md-5.col-md-offset-3.unsubscribe {
+  margin: 0 auto;
+}
