--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -1,43 +1,77 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h3>登録情報編集</h3>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<div class="container">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "form-horizontal" }) do |f| %>
   <%= render "customers/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="col-md-12">
+    <div class="form_group">
+      <label class="control-label col-md-2">名前</label>
+        <div class="col-md-3">
+          <%= f.label :last_name, "(姓)" %>
+          <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
+        </div>
+        <div class="col-md-3">
+          <%= f.label :first_name, "(名)"%>
+          <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
+        </div>
+    </div>
   </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+  <div class="col-md-12">
+    <div class="form_group">
+      <label class="control-label col-md-2">フリガナ</label>
+      <%= f.label :last_name_kana, "(セイ)" %>
+      <div class="col-md-3">
+        <%= f.text_field :last_name_kana, autofocus: true, class: "form-control" %>
+      </div>
+      <%= f.label :first_name_kana, "(メイ)" %>
+      <div class="col-md-3">
+        <%= f.text_field :first_name_kana, autofocus: true, class: "form-control" %>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-12">
+    <div class="form_group">
+      <%= f.label :email, "メールアドレス", class: "control-label col-md-2" %>
+      <div class="col-md-6">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-12">
+    <div class="form_group">
+      <%= f.label :postal_code, "郵便番号(ハイフンなし)", class: "control-label col-md-2" %>
+      <div class="col-md-6">
+        <%= f.text_field :postal_code, autofocus: true, class: "form-control" %>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-12">
+    <div class="form_group">
+      <%= f.label :address, "住所", class: "control-label col-md-2" %>
+      <div class="col-md-6">
+        <%= f.text_field :address, autofocus: true, class: "form-control" %>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-12">
+    <div class="form_group">
+      <%= f.label :phone_number, "電話番号(ハイフンなし)", class: "control-label col-md-2" %>
+      <div class="col-md-6">
+        <%= f.text_field :phone_number, autofocus: true, class: "form-control" %>
+      </div>
+    </div>
+  </div>
+
+    <div class="actions">
+      <%= f.submit "編集を保存する", class: "btn btn-success" %>
+    </div>
   <% end %>
+  <%= link_to "退会する", unsubscribe_customers_path, class: "btn btn-danger" %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
