--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,56 +1,76 @@
 <mark><h3>新規会員登録</h3></mark>
 
 <div class="container">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)), html: { class: "form-horizontal" } do |f| %>
     <%= render "customers/shared/error_messages", resource: resource %>
-    <div class="row md-3">
+    <div class="form_group">
       <label class="control-label col-md-2">名前</label>
         <%= f.label :last_name, "(姓)" %>
-        <%= f.text_field :last_name, autofocus: true %>
+        <div class="col-md-3">
+          <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
+        </div>
         <%= f.label :first_name, "(名)" %>
-        <%= f.text_field :first_name, autofocus: true%>
+        <div class="col-md-3">
+        <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
+        </div>
     </div>
 
-    <div class="row md-3">
+    <div class="form_group">
       <label class="control-label col-md-2">フリガナ</label>
       <%= f.label :last_name_kana, "(セイ)" %>
-      <%= f.text_field :last_name_kana, autofocus: true %>
+      <div class="col-md-3">
+        <%= f.text_field :last_name_kana, autofocus: true, class: "form-control" %>
+      </div>
       <%= f.label :first_name_kana, "(メイ)" %>
-      <%= f.text_field :first_name_kana, autofocus: true %>
+      <div class="col-md-3">
+        <%= f.text_field :first_name_kana, autofocus: true, class: "form-control" %>
+      </div>
     </div>
 
-    <div class="row md-3">
+    <div class="form_group">
       <%= f.label :email, "メールアドレス", class: "control-label col-md-2" %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="col-md-3">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+      </div>
     </div>
 
-    <div class="row md-3">
+    <div class="form_group">
       <%= f.label :postal_code, "郵便番号(ハイフンなし)", class: "control-label col-md-2" %>
-      <%= f.text_field :postal_code, autofocus: true %>
+      <div class="col-md-3">
+        <%= f.text_field :postal_code, autofocus: true, class: "form-control" %>
+      </div>
     </div>
 
-    <div class="row md-3">
+    <div class="form_group">
       <%= f.label :address, "住所", class: "control-label col-md-2" %>
-      <%= f.text_field :address, autofocus: true %>
+      <div class="col-md-3">
+        <%= f.text_field :address, autofocus: true, class: "form-control" %>
+      </div>
     </div>
 
-    <div class="row md-3">
+    <div class="form_group">
       <%= f.label :phone_number, "電話番号(ハイフンなし)", class: "control-label col-md-2" %>
-      <%= f.text_field :phone_number, autofocus: true %>
+      <div class="col-md-3">
+        <%= f.text_field :phone_number, autofocus: true, class: "form-control"%>
+      </div>
     </div>
 
-    <div class="row md-3">
+    <div class="form_group">
       <label class="control-label col-md-2">パスワード
         <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> 文字以上)</em>
       <% end %>
       </label>
-      <%= f.password_field :password, autocomplete: "new-password" %>
+      <div class="col-md-3">
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+      </div>
     </div>
 
-    <div class="row md-3">
+    <div class="form_group">
       <%= f.label :password_confirmation, "パスワード(確認用)", class: "control-label col-md-2" %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      <div class="col-md-3">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+      </div>
     </div>
 
     <div class="actions">
