--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>登録情報
   <%= link_to "編集する", edit_customers_path(@customer), class: "btn btn-primary" %>
-  <%= link_to "パスワードを変更する", edit_customer_password(@customer), class: "btn btn-primary" %>
+  <%= link_to "パスワードを変更する", edit_customer_password_path, class: "btn btn-primary" %>
 </p>
 
 <table class="table">
