--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,8 +1,19 @@
-<p><strong>本当に退会しますか？</strong></p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <h3 class="text-center"><strong>本当に退会しますか？</strong></h3>
 
-<p>退会すると、会員登録情報や<br>
-これまでの購入履歴が閲覧できなくなります。<br>
-退会する場合は、「退会する」をクリックしてください。</p>
+      <p class="text-center lead">退会すると、会員登録情報や<br>
+      これまでの購入履歴が閲覧できなくなります。<br>
+      退会する場合は、「退会する」をクリックしてください。</p>
 
-<%= link_to "退会しない", customers_mypage, class: "btn btn-primary" %>
-<%= link_to "退会する", customers_withdraw, method: :patch, class: "btn btn-primary" %>
+      <div class="row">
+        <div class="col-md-offset-4">
+          <%= link_to "退会しない", my_page_customers_path, class: "btn btn-primary" %>
+          <%= link_to "退会する", withdraw_customers_path, method: :patch, class: "btn btn-danger" %>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
