--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-4">
       <h3>ジャンル検索が入ります</h3>
-      
+
     </div>
 
     <div class="col-md-8">
@@ -22,7 +22,7 @@
           <div class="row">
             <% @products.each do |product| %>
               <div class="col-md-3">
-                <%= attachment_image_tag(product, :image, :fill, 150, 180, fallback: "no_image.png") %>
+                <%= attachment_image_tag(product, :image, size: "150x180", fallback: "no_image.png") %>
                 <%= product.name %>
                 <%= product.price %>
               </div>
