--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,34 +1,44 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-2">
       <h3>ジャンル検索が入ります</h3>
-
     </div>
 
-    <div class="col-md-8">
+    <div class="col-md-10">
       <div class="row">
-        <div class="col-md-8">
-          <p>ようこそ、NaganoCakeへ！<br>
-          このサイトは、ケーキ販売のECサイトになります。<br>
-          会員でない方も商品の閲覧はできますが、<br>
-          購入には会員登録が必要になります。<br>
-          </p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-8">
-          <h2>オススメ商品</h2>
-          <div class="row">
-            <% @products.each do |product| %>
-              <div class="col-md-3">
-                <%= attachment_image_tag(product, :image, size: "150x180", fallback: "no_image.png") %>
-                <%= product.name %>
-                <%= product.price %>
-              </div>
-            <% end %>
+        <div class="col-md-8 main-visual-background">
+          <div class="row main-visual-content">
+            <div class="col-md-12">
+              <p>ようこそ、NaganoCakeへ！<br>
+              このサイトは、ケーキ販売のECサイトになります。<br>
+              会員でない方も商品の閲覧はできますが、<br>
+              購入には会員登録が必要になります。<br>
+              </p>
+            </div>
           </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <h3>オススメ商品</h3>
+          <div class="row">
+            <% @products.each do |product| %>
+              <div class="col-md-3 recommend-products">
+                <%= attachment_image_tag(product, :image, size: "150x100", fallback: "no_image.png") %>
+                <p><%= product.name %></p>
+                <p>¥<%= product.price %></p>
+              </div>
+            <% end %>
+          </div>
+          <div class="row">
+            <div class="col-md-offset-10">
+              <%= link_to "もっと見る>", products_path %>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
 </div>
