--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,54 +1,62 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
-    <h3><mark>注文履歴詳細</mark></h3>
-                <%= form_with model: @order, url: orders_path(@order), local: true do |f| %>
-        <table class="active, table table-bordered">
+        <div class="col-md">
+    	<h3><mark>注文履歴詳細</mark></h3>
+        <%= form_with model: @order, url: orders_path(@order), local: true do |f| %>
+
 		<h4>注文情報</h4>
+		<% @orders.each do |order| %>
 		<tr>
-    		<th>注文日</th>
-    		<td><%= @customer.last_name %> <%= @customer.first_name %></td>
+    		<th class="active">注文日</th>
+    		<td><%= order.created_at %></td>
   		</tr>
 		<tr>
-    		<th>配送先</th>
-    		<td><%= @customer.last_name %> <%= @customer.first_name %></td>
+    		<th class="active">配送先</th>
+    		<td><%= order.postal_code %></br>
+    			<%= order.address %></br>
+    			<%= order.name %>
+    		</td>
   		</tr>
   		<tr>
-    		<th>支払方法</th>
-    		<td><%= @customer.last_name %> <%= @customer.first_name %></td>
+    		<th class="active">支払方法</th>
+    		<td><%= order.payment_type %></td>
   		</tr>
   		<tr>
-    		<th>ステータス</th>
-    		<td><%= @customer.last_name %> <%= @customer.first_name %></td>
+    		<th class="active">ステータス</th>
+    		<td><%= order.status %></td>
   		</tr>
 
 		<h4>請求情報</h4>
 		<tr>
-    		<th>商品合計</th>
-    		<td><%= @customer.last_name %> <%= @customer.first_name %></td>
+    		<th class="active">商品合計</th>
+    		<td><%= order.total_payment.to_i - order.postage.to_i %></td>
   		</tr>
 		<tr>
-    		<th>配送料</th>
-    		<td><%= @customer.last_name %> <%= @customer.first_name %></td>
+    		<th class="active">配送料</th>
+    		<td><%= order.postage %></td>
   		</tr>
   		<tr>
-    		<th>ご請求額</th>
-    		<td><%= @customer.last_name %> <%= @customer.first_name %></td>
+    		<th class="active">ご請求額</th>
+    		<td><%= order.total_payment %></td>
   		</tr>
+  		<% end %>
 
 		<h4>注文内容</h4>
 		<thead>
-			<tr>
+			<tr class="active">
     			<th>商品</th>
     			<th>単価（税込）</th>
     			<th>個数</th>
     			<th>小計</th>
-  		</tr>
+  			</tr>
 		</thead>
 		<tbody>
 			<% @order_products.each do |order_product| %>
 			<tr>
-				<td><%= order_product. %><%= order_product.name%></td>
+				<td>
+					<% order_product.products.each do |product| %>
+					<%= product.image_id %><%= order_product.name%>
+				</td>
 				<td><%= order_product.price.to_s(:delimited) %></td>
 				<td><%= order_product.amount %></td>
 				<td><%= order_product.total_price.to_s(:delimited) %></td>
@@ -56,3 +64,7 @@
 			<% end %>
 		</tbody>
 		</table>
+		</div>
+		</div>
+		</div>
+		<% end %>
