--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-offset-1 col-xs-11">
-      <h3>会員一覧</h3>
+    <div class="col-xs-offset-3 col-xs-6">
+      <h4>会員一覧</h4>
 
-      <table class="table table-bordered">
+      <table class="table table-hover">
 	  <tr>
 	    <th>会員ID</th>
 	    <th>氏名</th>
@@ -15,7 +15,7 @@
               <td><%= customer.id %></td>
               <td>
                   <%= link_to admin_customer_path(customer) do %>
-                     <%= customer.first_name %> <%= customer.last_name %>
+                     <%= customer.last_name %> <%= customer.first_name %> 
                   <% end %>
               </td>
               <td><%= customer.email %></td>
