--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,10 +1,20 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-offset-1 col-xs-11">
-      <h3>管理者画面</h3>
-      <span>本日の注文件数は</span>
+      <table class="table">
+      <tr class="active">
+        <th><h4>管理者画面</h4></th>
+        </tr>
+      </table>
+      <body>
+      <h3>
+        <span>本日の注文件数</span>
+      <%= link_to admin_orders_path do %>
 					<%= @count %>
-			<span>件です</span>
+			<% end %>
+			<span>件</span>
+			</h3>
+			</body>
     </div>
   </div>
 </div>
