--- a/app/views/public/cart_products/index.html.erb
+++ b/app/views/public/cart_products/index.html.erb
@@ -1,40 +1,75 @@
 <div class="container">
-    <div class="row">
-        <div class="col-md-6">
+  <div class="row">
+    <div class="col-md-9">
+      <div class="pull-left margin-bottom">
         <h4>ショッピングカート</h4>
-        <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>商品名</th>
-                        <th>単価（税込み）</th>
-                        <th>数量</th>
-                        <th>小計</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <% @cart_products.each do |cart_product| %>
+      </div>
+      <div class="pull-right margin-bottom">
+        <%= link_to destroy_all_cart_products_path, method: :delete do %>
+          <span class="btn btn-danger">カートを空にする</span>
+        <% end %>
+      </div>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>商品名</th>
+            <th>単価（税込）</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th></th>
+          </tr>
+      </thead>
+              <% @cart_products.each do |cart_product| %>
                 <tbody>
                     <tr>
                         <td>
-                            <%= attachment_image_tag(cart_product.product, :image, :fill, 50, 50) %>
+                            <%= attachment_image_tag cart_product.product, :image, fallback: "no_image.png", size:'50x50' %>
                             <%= cart_product.product.name %>
                         </td>
                         <td>
                             <%= cart_product.product.tax_on %>
                         </td>
                         <td>
-                            <%= cart_product.amount %>
+                            <%= form_for cart_product do |f| %>
+                            <%= f.number_field :amount, max: 10 %>
+                            <%= f.submit "変更", class: "btn btn-info" %>
+                            <% end %>
                         </td>
                         <td>
-                            <%= cart_product.product.price %>
+                            <%= cart_product.tax_on_price %>
                         </td>
                         <td>
-                            <%= link_to "削除する", cart_product_path(cart_product), class:"btn btn-danger btn-md", method: :delete %>
+                            <%= link_to "削除する", cart_product_path(cart_product), class: "btn btn-danger btn-md", method: :delete %>
                         </td>
                     </tr>
                 </tbody>
-                <% end %>
+              <% end %>
             </table>
+            <div class="col-xs-9 margin-bottom">
+              <%= link_to products_path do %>
+              <span class="btn btn-info glyphicon glyphicon-chevron">買い物を続ける</span>
+              <% end %>
+            </div>
+            <tr>
+            <td>
+                  <div class="col-md-4 col-md-offset-4 text-left">
+                    <table class="table table-bordered">
+                      <tbody>
+                        <td>
+                          合計金額
+                        </td>
+                        <td>
+                          <%= current_customer.cart_total_price %>
+                        </td>
+                      </tbody>
+                    </table>
+                  </div>
+            </td>
+            </tr>
+            </table>
+            <div class="col-md-4 col-md-offset-4 text-center">
+              <%= link_to " 情報入力に進む", orders_path, class: "glyphicon glyphicon-pencil btn btn-success" %>
+            </div>
         </div>
     </div>
 </div>
