--- a/app/views/public/deliveries/edit.html.erb
+++ b/app/views/public/deliveries/edit.html.erb
@@ -3,21 +3,21 @@
         <div class="col-md-6">
             <h4>配送先編集</h4>
             <%= form_for (@delivery) do |f| %>
-            <table class="table table-bordered">
+            <table class="table table-hover">
             <tr>
                 <th>郵便番号(ハイフンなし)</th>
                 <td><%= f.text_field :postal_code %></td>
             </tr>
             <tr>
                 <th>住所</th>
-                <td><%= f.text_field :address %></td>
+                <td><%= f.text_field :address, class: "col-xs-12" %></td>
             </tr>
             <tr>
                 <th>宛名</th>
                 <td><%= f.text_field :name %></td>
+                <td><%= f.submit "編集する", class:"btn btn-primary btn-md" %></td>
             </tr>
             </table>
-              <%= f.submit "編集する", class:"btn btn-primary btn-md" %>
             <% end %>
         </div>
     </div>
