--- a/app/views/public/deliveries/index.html.erb
+++ b/app/views/public/deliveries/index.html.erb
@@ -1,30 +1,34 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <h4>配送先登録/一覧</h4>
             <%= form_for (@delivery) do |f| %>
-            <table class="table table-bordered">
+            <table class="table table-hover">
             <tr>
                 <th>郵便番号(ハイフンなし)</th>
                 <td><%= f.text_field :postal_code %></td>
             </tr>
             <tr>
                 <th>住所</th>
-                <td><%= f.text_field :address %></td>
+                <td><%= f.text_field :address, class: "col-xs-12" %></td>
             </tr>
             <tr>
                 <th>宛名</th>
                 <td><%= f.text_field :name %></td>
+                <td><%= f.submit "登録する", class:"btn pull-right btn-primary btn-success" %></td>
             </tr>
             </table>
-              <%= f.submit "登録する", class:"btn btn-primary btn-md" %>
+            </div>
             <% end %>
+            
+            <div class="col-md-9">
             <table class="table table-bordered">
                 <thead>
                     <tr>
                         <th>郵便番号</th>
                         <th>住所</th>
                         <th>宛名</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <% @deliveries.each do |delivery| %>
