--- a/app/views/public/genres/_genre_search.html.erb
+++ b/app/views/public/genres/_genre_search.html.erb
@@ -1,16 +1,18 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th>ジャンル検索</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% genres.each do |genre| %>
+<div class="col-md-2">
+  <table class="table">
+    <thead>
       <tr>
-        <td>
-          <%= link_to genre.name, search_products_path('value': genre.id) %>
-        </td>
+        <th>ジャンル検索</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% genres.each do |genre| %>
+        <tr>
+          <td>
+            <%= link_to genre.name, search_products_path('value': genre.id) %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
