--- a/app/views/public/products/search.html.erb
+++ b/app/views/public/products/search.html.erb
@@ -1,26 +1,13 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
-      <%= render 'public/genres/genre_search', genres: @genres %>
-    </div>
+    <%= render 'public/genres/genre_search', genres: @genres %>
     <div class="col-md-9">
       <h3><%= @genre.name %>一覧</h3>
       <% if @products.empty? %>
         <h4>該当する商品はありません</h4>
       <% end %>
-      <!--部分テンプレート？-->
-      <div class="row">
-        <% @products.each do |product| %>
-          <div class="col-md-3">
-            <%= link_to product_path(product) do %>
-              <%= attachment_image_tag(product, :image, size: '200x200', fallback: "no_image.png") %><br />
-              <%= product.name %><br />
-            <% end %>
-            ¥<%= product.tax_on.to_s(:delimited) %>
-          </div>
-        <% end %>
-      </div>
-      <!--ここまで-->
+      <!--商品一覧-->
+      <%= render 'product_list', products: @products %>
     </div>
   </div>
   <div class="row">
