--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -3,32 +3,28 @@
         <div class="col-md">
     <h3><mark>注文情報入力</mark></h3>
     <%= form_with model: @order, url: confirm_orders_path, method: :get, local: true do |f| %>
-    <h3>支払方法</h3>
-      <div>
-        <%= f.radio_button :payment_type, 1, checked: true %>
-        <%= f.label :payment_type, "クレジットカード", {value: 1, style: "display: inline-block;"} %>
-      </div>
-      <div>
-        <%= f.radio_button :payment_type, 2 %>
-        <%= f.label :payment_type, "銀行振込", {value: 2, style: "display: inline-block;"} %>
-      </div>
 
+     <h3>支払方法</h3>
+      <div>
+        <%= f.radio_button :payment_type, 'クレジットカード', checked: true %>
+        <%= f.label :payment_type, "クレジットカード", {value: "クレジットカード", style: "display: inline-block;"} %>
+      </div>
+      <div>
+        <%= f.radio_button :payment_type, '銀行振込' %>
+        <%= f.label :payment_type, "銀行振込", {value: "銀行振込", style: "display: inline-block;"} %>
+      </div>
+​
     <h3>お届け先</h3>
       <div>
         <%= f.radio_button :address_type, :A, checked: true %>
         <%= f.label :address_type, "ご自身の住所", {value: :A, style: "display: inline-block;"} %><br>
         〒<%= @customer.postal_code.to_s.insert(3, "-") %><%= @customer.address %><br>
-        <%= @customer.first_name %><%= @customer.last_name %>
+        <%= @customer.last_name %><%= @customer.first_name %>
       </div>
       <div>
-        <%#= form_with model: @order, url: delivery_path, local: true do |f| %>
         <%= f.radio_button :address_type, :B %>
         <%= f.label :address_type, "登録済み住所", {value: :B, style: "display: inline-block;"} %>
-        <%# @customer_address.each do |deliver| %>
-        <%= f.select :address,Delivery.addresses.keys.to_a %>
-        <%= f.select :address,Delivery.addresses.values.to_a %>
-        <%# end %>
-        <%# end %>
+        <%= f.collection_select :selected_address, @customer.deliveries, :id, :delivery_info %>
       </div>
       <div>
         <%= f.radio_button :address_type, :C %>
@@ -40,3 +36,4 @@
       </div>
       <div><%= f.submit '確認画面に進む', class: 'btn btn-info' %></div>
       <% end %>
+  </div>
