--- a/app/views/public/orders/done.html.erb
+++ b/app/views/public/orders/done.html.erb
@@ -1,1 +1,7 @@
-<h1>🍰ご購入ありがとうございました！🍰</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <h3 class="text-center"><strong>🍰ご購入ありがとうございました！🍰</strong></h3>
+      </div>
+      </div>
+      </div>
