--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
-    	<h3><mark>注文情報確認</mark></h3>
-        <%= form_with model: @order, url: done_orders_path(@order), method: :get, local: true do |f| %>
+    	<h3 class="header-background">注文情報確認</h3>
+        <%#= form_with (model:[@order,@order_product], url: orders_path, local: true) do |f| %>
+        <%#= form_with model:[@order,@order_product], url: orders_path, local: true do |f| %>
+        <%= form_with model: @order, url: orders_path, local: true do |f| %>
         <table class="active, table table-bordered">
 		<thead>
 			<tr class = "active">
@@ -14,16 +16,16 @@
 		</thead>
 
 		<tbody>
-			<% @order_products.each do |order_product| %>
+			<% @cart_products.each do |cart_product| %>
 			<tr>
 				<td>
 					<%#= order_product.@product.image_id %>
-					<%#= attachment_image_tag(@product, :image_id, :fill, 50, 50, fallback: "no-image-icon.jpg") %>
-					<%= order_product.name %>
+					<%= attachment_image_tag(@product, :image_id, :fill, 50, 50, fallback: "no-image-icon.jpg") %>
+					<%= cart_product.product.name %>
 				</td>
-				<td><%= order_product.price.to_s(:delimited) %></td>
-				<td><%= order_product.amount %></td>
-				<td><%= order_product.total_price.to_s(:delimited) %></td>
+				<td><%= cart_product.product.price.to_s(:delimited) %></td>
+				<td><%= cart_product.amount %></td>
+				<td><%= cart_product.tax_on_price.to_s(:delimited) %></td>
 			</tr>
 			<% end %>
 		</tbody>
@@ -33,33 +35,43 @@
     <div class="col-md-4">
     	<table class="active, table table-bordered">
 		<thead>
-			<tr>
-				<th class="active">送料</th>
-    			<th><%= @order.postage %></th>
-			</tr>
 		</thead>
-
     		<tbody>
+    		<tr>
+   				<td class="active">商品合計</td>
+	    		<td><%= current_customer.cart_total_price.to_s(:delimited) %></td>
+			</tr>
 			<tr>
-				<td class="active">商品合計</td>
-	    		<td><%= @order.order_total_price.to_s(:delimited) %></td>
+				<td class="active">送料</td>
+    			<td>
+    				<%= f.hidden_field :postage, :value => @order.postage %>
+    				<%= @order.postage %>
+    			</td>
 			</tr>
 			<tr>
 				<td class="active">請求金額</td>
-    			<td><%#= @order.total_pay.to_s(:delimited) %></td>
+				  <td>
+				  	<%= f.hidden_field :total_payment, :value => current_customer.cart_total_price + @order.postage %>
+				  	<%= (current_customer.cart_total_price + @order.postage).to_s(:delimited) %>
+				  </td>
 			</tr>
 		</tbody>
 		</table>
 
-		<div class="row">
+	<div class="row">
       <div class="col-md-5">
   			<p>支払方法</p>
+  			<%= f.hidden_field :payment_type, :value => @order.payment_type %>
   			<%= @order.payment_type %>
   			<p>お届け先</p>
-					<%= @order.postal_code %><%= @order.address %></br>
-      		<%= @order.name %>
-			<% end %>
+				<%= f.hidden_field :postal_code, :value => @order.postal_code %>
+				<%= @order.postal_code %>
+				<%= f.hidden_field :address, :value => @order.address %>
+				<%= @order.address %></br>
+				<%= f.hidden_field :name, :value => @order.name %>
+				<%= @order.name %>
 			</div>
+			<div><%= f.submit '購入を確定する', class: 'btn btn-info' %></div>
+      		<% end %>
   </div>
 </div>
-
