--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,46 +1,61 @@
 <div class="container">
     <div class="row">
-        <div class="col-md">
     	<h3><mark>注文履歴詳細</mark></h3>
         <%= form_with model: @order, url: orders_path(@order), local: true do |f| %>
 
+		<div class="col-md-6">
+    	<table class="active, table table-bordered">
 		<h4>注文情報</h4>
 		<% @orders.each do |order| %>
-		<tr>
-    		<th class="active">注文日</th>
-    		<td><%= order.created_at %></td>
-  		</tr>
-		<tr>
-    		<th class="active">配送先</th>
-    		<td><%= order.postal_code %></br>
-    			<%= order.address %></br>
-    			<%= order.name %>
-    		</td>
-  		</tr>
-  		<tr>
-    		<th class="active">支払方法</th>
-    		<td><%= order.payment_type %></td>
-  		</tr>
-  		<tr>
-    		<th class="active">ステータス</th>
-    		<td><%= order.status %></td>
-  		</tr>
+		<thead>
+		</thead>
+    		<tbody>
+    		<tr>
+   				<td class="active">注文日</td>
+	    		<td><%= order.created_at.strftime('%Y/%m/%d') %></td>
+				</tr>
+				<tr>
+   				<td class="active">配送先</td>
+	    		<td><%= order.postal_code %></br>
+    					<%= order.address %></br>
+    					<%= order.name %>
+	    		</td>
+				</tr>
+  			<tr>
+    			<td class="active">支払方法</td>
+    			<td><%= order.payment_type %></td>
+  			</tr>
+  			<tr>
+    			<td class="active">ステータス</td>
+    			<td><%= order.status %></td>
+  			</tr>
+  		</tbody>
+  	</table>
 
-		<h4>請求情報</h4>
-		<tr>
-    		<th class="active">商品合計</th>
-    		<td><%= order.total_payment.to_i - order.postage.to_i %></td>
-  		</tr>
-		<tr>
-    		<th class="active">配送料</th>
-    		<td><%= order.postage %></td>
-  		</tr>
-  		<tr>
-    		<th class="active">ご請求額</th>
-    		<td><%= order.total_payment %></td>
-  		</tr>
-  		<% end %>
+		<div class="col-md-10">
+    	<table class="active, table table-bordered">
+			<h4>請求情報</h4>
+			<thead>
+				</thead>
+    			<tbody>
+						<tr>
+    					<td class="active">商品合計</td>
+    					<td><%= order.total_payment.to_i - order.postage.to_i %></td>
+  					</tr>
+						<tr>
+    					<td class="active">配送料</td>
+    					<td><%= order.postage %></td>
+  					</tr>
+  					<tr>
+    					<td class="active">ご請求額</td>
+    					<td><%= order.total_payment %></td>
+  					</tr>
+  					<% end %>
+  					</div>
 
+
+			<div class="col-md-8 col-md-offset-4">
+    		<table class="active, table table-bordered">
 		<h4>注文内容</h4>
 		<thead>
 			<tr class="active">
@@ -51,11 +66,10 @@
   			</tr>
 		</thead>
 		<tbody>
-			<% @order_products.each do |order_product| %>
+			<% @order_product.each do |order_product| %>
 			<tr>
 				<td>
-					<% order_product.products.each do |product| %>
-					<%= product.image_id %><%= order_product.name%>
+					<%= order_product.product.name %></br>
 				</td>
 				<td><%= order_product.price.to_s(:delimited) %></td>
 				<td><%= order_product.amount %></td>
@@ -64,7 +78,6 @@
 			<% end %>
 		</tbody>
 		</table>
-		</div>
 		</div>
 		</div>
 		<% end %>
