機能実装完了

--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -2,46 +2,10 @@
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <h4>商品一覧</h4>
-
       <%= link_to "＋", new_admin_product_path, class: "pull-right new_product_btn" %>
-      <table class="table table-hover table-inverse">
-        <thead>
-          <tr class="active">
-            <th>商品ID</th>
-            <th>商品名</th>
-            <th>税抜価格</th>
-            <th>ジャンル</th>
-            <th>ステータス</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <% @products.each do |product| %>
-          <tr>
-            <td>
-              <%= product.id %>
-            </td>
-            <td>
-              <%= link_to product.name, admin_product_path(product) %>
-            </td>
-            <td>
-              <%= product.price %>
-            </td>
-            <td>
-              <%= product.genre.name %>
-            </td>
-            <td>
-              <% if product.is_active == true %>
-                <%= "販売中" %>
-              <% else %>
-                <%= "販売中止" %>
-              <% end %>
-            </td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <%= paginate @products %>
+      <div class="product_list">
+        <%= render "admin/products/product_list", products: @products %>
+      </div>
     </div>
   </div>
 </div>
