--- a/app/assets/stylesheets/admin/products.scss
+++ b/app/assets/stylesheets/admin/products.scss
@@ -30,3 +30,12 @@
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
   border-bottom: none;
 }
+
+.form-control.introduction-form {
+  width: 100%;
+  height: 150px;
+}
+
+.table-lign {
+  tr-valign: top;
+}
