--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,8 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.header-background {
+  background-color: #e6e6fa;
+  text-align: center;
+}
