--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the public::customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.row {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
