--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -15,11 +15,11 @@
   <div class="row form_group">
     <%= f.label :introduction, "商品説明", class: "control-label col-md-2" %>
     <div class="col-md-5">
-      <%= f.text_field :introduction, class: "form-control" %>
+      <%= f.text_field :introduction, class: "form-control introduction-form" %>
     </div>
   </div>
 
-<% if request.path_info = new_admin_product_path %>
+<% if request.path_info == new_admin_product_path %>
 
   <div class="row form_group">
     <%= f.label :genre_id, "ジャンル", class: "control-label col-md-2" %>
@@ -30,9 +30,11 @@
 
 <% else %>
 
-  <div class="form_group">
+  <div class="row form_group">
     <%= f.label :genre_id, "ジャンル", class: "control-label col-md-2" %>
-    <%= f.collection_select :genre_id, Genre.all, :id, :name, class: "form-control" %>
+    <div class="col-md-5">
+      <%= f.collection_select :genre_id, Genre.all, :id, :name, {}, { class: "form-control" } %>
+    </div>
   </div>
 
 <% end %>
@@ -44,15 +46,15 @@
     </div>
   </div>
 
-<% if request.path_info = new_admin_product_path %>
+<% if request.path_info == new_admin_product_path %>
 
-    <div class="row form-group">
+  <div class="row form-group">
       <%= f.label :is_active, "販売ステータス", class: "control-label col-md-2" %>
       <div class="col-md-6">
-      <%= f.select :is_active, [["販売中", true], ["売り切れ", false]], { include_blank: "--選択して下さい--", selected: 0 }, class: "form-control" %>
+      <%= f.select :is_active, [["販売中", true], ["売り切れ", false]], { include_blank: "--選択して下さい--", selected: 0 }, { class: "form-control" } %>
       </div>
-    </div>
   </div>
+</div>
 
   <div class="actions">
     <%= f.submit "新規登録", class: "btn btn-info pull-right btn-lg" %>
@@ -60,14 +62,16 @@
 
 <% else %>
 
-    <div class="row form_group">
-      <%= f.label :is_active, "販売ステータス", class: "control-label col-md-2" %>
-      <%= f.select :is_active, [["販売中", true], ["販売中止", false]], class: "form-control" %>
+  <div class="row form_group">
+    <%= f.label :is_active, "販売ステータス", class: "control-label col-md-2" %>
+    <div class="col-md-6">
+    <%= f.select :is_active, [["販売中", true], ["販売中止", false]], {}, { class: "form-control" } %>
     </div>
   </div>
+</div>
 
   <div class="actions">
-    <%= f.submit "変更を保存" %>
+    <%= f.submit "変更を保存", class: "btn btn-info pull-right btn-lg" %>
   </div>
 
 <% end %>
