--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,7 +1,7 @@
 <h3>マイページ</h3>
 
 <p>登録情報
-  <%= link_to "編集する", edit_customers_path(@customer), class: "btn btn-primary" %>
+  <%= link_to "編集する", edit_customers_path, class: "btn btn-primary" %>
   <%= link_to "パスワードを変更する", edit_customer_password_path, class: "btn btn-primary" %>
 </p>
 
@@ -32,9 +32,8 @@
   </tr>
 </table>
 
-<p>配送先
+<p><strong>配送先</strong></p>
   <%= link_to "一覧を見る", class: "btn btn-primary" %>
-</p>
-<p>注文一覧
+
+<p><strong>注文一覧</strong></p>
   <%= link_to "一覧を見る", class: "btn btn-primary" %>
-</p>
