--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -12,23 +12,19 @@
         <%= f.radio_button :payment_type, 2 %>
         <%= f.label :payment_type, "銀行振込", {value: 2, style: "display: inline-block;"} %>
       </div>
-
+​
     <h3>お届け先</h3>
       <div>
         <%= f.radio_button :address_type, :A, checked: true %>
         <%= f.label :address_type, "ご自身の住所", {value: :A, style: "display: inline-block;"} %><br>
-        〒<%= @customer.postal_code.to_s.insert(3, "-") %><%= @customer.address %><br>
+        〒<%#= @customer.postal_code.to_s.insert(3, "-") %><%= @customer.address %><br>
         <%= @customer.first_name %><%= @customer.last_name %>
       </div>
       <div>
         <%#= form_with model: @order, url: delivery_path, local: true do |f| %>
         <%= f.radio_button :address_type, :B %>
         <%= f.label :address_type, "登録済み住所", {value: :B, style: "display: inline-block;"} %>
-        <%# @customer_address.each do |deliver| %>
-        <%= f.select :address,Delivery.addresses.keys.to_a %>
-        <%= f.select :address,Delivery.addresses.values.to_a %>
-        <%# end %>
-        <%# end %>
+        <%= f.collection_select :address, @customer.deliveries, :id, :delivery_info %>
       </div>
       <div>
         <%= f.radio_button :address_type, :C %>
@@ -40,3 +36,4 @@
       </div>
       <div><%= f.submit '確認画面に進む', class: 'btn btn-info' %></div>
       <% end %>
+  </div>
